Now the project starts

--- a/Reviews/Views/Categories/Index.cshtml
+++ b/Reviews/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Recipes.Models.Category>
+﻿@model IEnumerable<Reviews.Models.Category>
 
 <table class="table" style="margin: 20px 0">
     <tr>
