--- a/Reviews/Views/Clients/Create.cshtml
+++ b/Reviews/Views/Clients/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Recipes.Models.Client
+﻿@model Reviews.Models.Client
 
 <div style="display: block; padding: 10px;" align="center">
     <h3>Register</h3>
