--- a/Reviews/Views/Recipes/Edit.cshtml
+++ b/Reviews/Views/Recipes/Edit.cshtml
@@ -1,8 +1,8 @@
-﻿@model Recipes.Models.Recipe
+﻿@model Reviews.Models.Recipe
 
 @{
     ViewBag.Title = "Edit";
-    Recipes.Models.Client clnt = (Recipes.Models.Client)Session["Client"];
+    Reviews.Models.Client clnt = (Reviews.Models.Client)Session["Client"];
 }
 
 @using (Html.BeginForm())
