--- a/Reviews/Views/Shared/_Layout.cshtml
+++ b/Reviews/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    Recipes.Models.Client clnt = (Recipes.Models.Client)Session["Client"];
+﻿@using Reviews.Models
+@{
+    Client clnt = (Client)Session["Client"];
 }
 <!DOCTYPE html>
 <html>
