--- a/Reviews/Views/Shared/_LoginPartial.cshtml
+++ b/Reviews/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Recipes.Models.Client clnt = ((Recipes.Models.Client)Session["Client"]);
+    Reviews.Models.Client clnt = ((Reviews.Models.Client)Session["Client"]);
 }
 
 <ul class="navbar-nav bd-navbar-nav flex-row navbar-right">
