--- a/Reviews/Views/Categories/Delete.cshtml
+++ b/Reviews/Views/Categories/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Recipes.Models.Category
+﻿@model Reviews.Models.Category
 
 <h6 style="margin: 20px 0">Are you sure you want to delete this category?</h6>
 <div>
