--- a/Reviews/Views/Clients/Stats.cshtml
+++ b/Reviews/Views/Clients/Stats.cshtml
@@ -1,6 +1,6 @@
 ﻿<h2 class="page-title" style="margin-top: 30px">@ViewBag.Title</h2>
 
-@model IEnumerable<Recipes.ViewModels.UserRecipesViewModel>
+@model IEnumerable<Reviews.ViewModels.UserRecipesViewModel>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
