--- a/Reviews/Views/Recipes/Stats.cshtml
+++ b/Reviews/Views/Recipes/Stats.cshtml
@@ -1,6 +1,6 @@
 ﻿<h2 class="page-title" style="margin-top: 30px">@ViewBag.Title</h2>
 
-@model IEnumerable<Recipes.ViewModels.RecipeCommentViewModel>
+@model IEnumerable<Reviews.ViewModels.RecipeCommentViewModel>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
