--- a/Reviews/Views/Comments/Details.cshtml
+++ b/Reviews/Views/Comments/Details.cshtml
@@ -7,19 +7,19 @@
 <div style="margin: 20px 0">
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Client.ClientName)
+            @Html.DisplayNameFor(model => model.User.Username)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Client.ClientName)
+            @Html.DisplayFor(model => model.User.Username)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Recipe.Content)
+            @Html.DisplayNameFor(model => model.Review.Content)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Recipe.Content)
+            @Html.DisplayFor(model => model.Review.Content)
         </dd>
 
         <dt>
