--- a/Reviews/Views/Recipes/Create.cshtml
+++ b/Reviews/Views/Recipes/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Reviews.Models
-@model Recipe
+@model Review
 
 @{
     ViewBag.Title = "Create";
-    Client clnt = (Reviews.Models.Client)Session["Client"];
+    var clnt = (User)Session["Client"];
 }
 
 @using (Html.BeginForm()) 
