--- a/Reviews/Views/Clients/Create.cshtml
+++ b/Reviews/Views/Clients/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Reviews.Models.Client
+﻿@model Reviews.Models.User
 
 <div style="display: block; padding: 10px;" align="center">
     <h3>Register</h3>
@@ -19,10 +19,10 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.ClientName, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
                 </div>
             </div>
 
