--- a/Reviews/Views/Clients/Details.cshtml
+++ b/Reviews/Views/Clients/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Reviews.Models.Client
+﻿@model Reviews.Models.User
 
 @{
     ViewBag.Title = "Details";
@@ -15,11 +15,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ClientName)
+            @Html.DisplayNameFor(model => model.Username)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ClientName)
+            @Html.DisplayFor(model => model.Username)
         </dd>
 
         <dt>
