--- a/Reviews/Views/Clients/Edit.cshtml
+++ b/Reviews/Views/Clients/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Reviews.Models.Client
+﻿@model Reviews.Models.User
 
 @{
     ViewBag.Title = "Edit";
@@ -21,10 +21,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ClientName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
             </div>
         </div>
 
