--- a/Reviews/Views/Clients/Search.cshtml
+++ b/Reviews/Views/Clients/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Reviews.Models.Client>
+﻿@model IEnumerable<Reviews.Models.User>
 
 @{
     ViewBag.Title = "Search";
@@ -52,7 +52,7 @@
             @Html.DisplayNameFor(model => model.Gender)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ClientName)
+            @Html.DisplayNameFor(model => model.Username)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.FirstName)
@@ -75,7 +75,7 @@
             @Html.DisplayFor(modelItem => item.Gender)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ClientName)
+            @Html.DisplayFor(modelItem => item.Username)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FirstName)
