--- a/Reviews/Views/Comments/Delete.cshtml
+++ b/Reviews/Views/Comments/Delete.cshtml
@@ -8,19 +8,19 @@
 <div>
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Client.ClientName)
+            @Html.DisplayNameFor(model => model.User.Username)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Client.ClientName)
+            @Html.DisplayFor(model => model.User.Username)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Recipe.Content)
+            @Html.DisplayNameFor(model => model.Review.Content)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Recipe.Content)
+            @Html.DisplayFor(model => model.Review.Content)
         </dd>
 
         <dt>
