Added Authorize filter and BaseController

--- a/Reviews/Views/Shared/_Layout.cshtml
+++ b/Reviews/Views/Shared/_Layout.cshtml
@@ -28,9 +28,9 @@
                 }
                 @if (clnt != null && clnt.IsAdmin)
                 {
-                    <li class="nav-item">@Html.ActionLink("Users", "Index", "Clients", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Users", "Index", "User", new { area = "" }, new { @class = "nav-link" })</li>
                 }
-                <li class="nav-item">@Html.ActionLink("User Statistics", "Stats", "Clients", new { area = "" }, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("User Statistics", "Stats", "User", new { area = "" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Review Statistics", "Stats", "Recipes", new { area = "" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
             </ul>
