--- a/Reviews/Views/Home/Contact.cshtml
+++ b/Reviews/Views/Home/Contact.cshtml
@@ -3,39 +3,22 @@
 @{
     ViewBag.Title = "Contact Us";
 }
-<center>
-    <h6 style="margin: 20px 0">@ViewBag.Title</h6>
-    <address>
-        Our office is at Tzrifin, Rishon Lezion
-    </address>
-    <address>
-        <strong>Owners: </strong> <br/>
-        <a href="mailto:danaeliyahu@gmail.com">danaeliyahu@gmail.com</a><br/>
-        <a href="mailto:stavlev95@gmail.com">stavlev95@gmail.com</a><br/>
-        <a href="mailto:noa3005@gmail.com">noa3005@gmail.com</a><br/>
-        <a href="mailto:itommen@gmail.com">itommen@gmail.com</a><br/>
-    </address>
+<h1>
+    @ViewBag.Title
+</h1>
+<div style="display: flex; justify-content: space-between;">
+    <div>
+        <strong>Owners: </strong> <br />
+        <a href="mailto:nirelko1@gmail.com">nirelko1@gmail.com</a><br />
+        <a href="mailto:asafl95@gmail.com">asafl95@gmail.com</a><br />
+        <a href="mailto:nivzz@nana.co.il">nivzatniv@walla.com</a><br />
+        <a href="mailto:Liron.broyer@gmail.com">Liron.broyer@gmail.com</a><br />
+    </div>
+    <div>
+        <address>
+            Our University at 450 Serra Mall, Stanford, CA 94305, USA
+        </address>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12673.901771642968!2d-122.164905!3d37.4258717!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fbb2a678bea9d%3A0x29cdf01a44fc687f!2z15DXldeg15nXkdeo16HXmdeY16og16HXmNeg16TXldeo15M!5e0!3m2!1siw!2sil!4v1509213398794" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+</div>
 
-
-    <div id="map" style="width: 500px; height: 400px;"></div>
-</center>
-<script type="text/javascript">
-    function initMap() {
-        var myLatLng = { lat: 31.957328, lng: 34.84056599999997 };
-
-        var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 10,
-            center: myLatLng
-        });
-
-        var marker = new google.maps.Marker({
-            position: myLatLng,
-            map: map,
-            title: 'Hello World!'
-        });
-
-        marker.setMap(map);
-    }
-
-    initMap();
-</script>
