--- a/Reviews/Views/Home/Index.cshtml
+++ b/Reviews/Views/Home/Index.cshtml
@@ -2,44 +2,15 @@
     ViewBag.Title = "Home Page";
 }
 
-<div style="position: relative;">
-    <canvas id="canvas" width="1000" height="250"></canvas>
-
-    <script>
-        var canvas = document.getElementById('canvas');
-        var context = canvas.getContext('2d');
-        var imageObj = new Image();
-
-        imageObj.onload = function() {
-            context.drawImage(imageObj, 0, 0);
-        };
-
-        imageObj.src = '../../tasty.jpg';
-    </script>
-    <div style="position: absolute; bottom: 0; left: 10px">
-        <h1 style="color: white; text-shadow: indigo 1px; vertical-align: bottom">
-            Recipes
-        </h1>
-        <h4 style="color: white; vertical-align: bottom">
-            where you can share your passion for cooking & baking with everyone
-        </h4>
-    </div>
-</div>
-<br />
 <div class="row">
-    <div class="col-md-6" style="padding-right: 40px;">
+    <div class="col-md-12" style="padding-right: 40px;">
         <h2>Getting started</h2>
         <br />
         <p>
-            In our website, you can enjoy a variety of recipes from all around the world
-            And also share your personal recipes with everyone and receive feedback and suggestions.
-            Once logged in, click on "Recipes" on the top menu to begin!
+            In our website, you can enjoy a variety of REVIEWS from all around the world
+            And also share your personal REVIEWS with everyone and receive feedback and suggestions.
+            Once logged in, click on "REVIEWS" on the top menu to begin!
         </p>
     </div>
-    <div class="col-md-6">
-        <h2>Our Best Recipes</h2>
-        <video width="300" height="240" controls>
-            <source src="~/Content/Tasty.mp4" type="video/mp4">
-        </video>
-    </div>
+
 </div>
