--- a/Reviews/Views/Shared/_LoginPartial.cshtml
+++ b/Reviews/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
             @Html.ActionLink("Register", "Create", "User", new {area = ""}, new {@class = "btn btn-primary"})
         </li>
         <li class="nav-item">
-            @Html.ActionLink("Login", "RecipesLogin", "User", new {area = ""}, new {@class = "btn"})
+            @Html.ActionLink("Login", "Login", "User", new {area = ""}, new {@class = "btn"})
         </li>
     }
     else
