--- a/Reviews/Views/User/FailedLogin.cshtml
+++ b/Reviews/Views/User/FailedLogin.cshtml
@@ -5,5 +5,5 @@
 <div class="container" style="margin: 20px 0">
     Login failed, please check your login details and try again
     <br/>
-    <button style="margin: 20px 0">@Html.ActionLink("התחבר מחדש", "RecipesLogin", "User")</button>
+    <button style="margin: 20px 0">@Html.ActionLink("התחבר מחדש", "ReviewsLogin", "User")</button>
 </div>
