--- a/Reviews/Views/Comments/Create.cshtml
+++ b/Reviews/Views/Comments/Create.cshtml
@@ -11,10 +11,10 @@
     <div class="form-horizontal" style="margin: 20px 0">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.ClientId, "ClientID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.User.Id, "UserID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ClientID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ClientId, "", new { @class = "text-danger" })
+                @Html.DropDownList("UserID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.User.Id, "", new { @class = "text-danger" })
             </div>
         </div>
 
