--- a/Reviews/Views/Reviews/Create.cshtml
+++ b/Reviews/Views/Reviews/Create.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "Create";
-    var clnt = (User)Session["Client"];
+    var user = (User)Session["User"];
 }
 
 @using (Html.BeginForm()) 
@@ -11,9 +11,9 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal" style="margin: 20px 0">
-        @using (Html.BeginForm("Create", "Recipes"))
+        @using (Html.BeginForm("Create", "Reviews"))
         {
-        <input type="hidden" name="clientId" value="@clnt.Id" />
+        <input type="hidden" name="userId" value="@user.Id" />
 
         <div class="form-group">
             @Html.LabelFor(model => model.Category.Id, "Category", htmlAttributes: new { @class = "control-label col-md-2" })
