--- a/Reviews/Views/Reviews/Edit.cshtml
+++ b/Reviews/Views/Reviews/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
-    Reviews.Models.User clnt = (Reviews.Models.User)Session["Client"];
+    Reviews.Models.User user = (Reviews.Models.User)Session["User"];
 }
 
 @using (Html.BeginForm())
@@ -13,9 +13,9 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-        @using (Html.BeginForm("Create", "Recipes"))
+        @using (Html.BeginForm("Create", "Reviews"))
         {
-            <input type="hidden" name="clientId" value="@clnt.Id" />
+            <input type="hidden" name="userId" value="@user.Id" />
 
             <div class="form-group">
                 @Html.LabelFor(model => model.CategoryId, "Category", htmlAttributes: new { @class = "control-label col-md-2" })
