--- a/Reviews/Views/Reviews/Index.cshtml
+++ b/Reviews/Views/Reviews/Index.cshtml
@@ -3,10 +3,10 @@
 
 @{
     ViewBag.Title = "Reviews";
-    var clnt = (User)Session["Client"];
+    var user = (User)Session["User"];
 }
 
-@using (Html.BeginForm("Search", "Recipes", FormMethod.Get))
+@using (Html.BeginForm("Search", "Reviews", FormMethod.Get))
 {
     <aside style="margin: 20px 0">Enter up to 3 search parameters and click the "Search" button below</aside>
 
@@ -43,7 +43,7 @@
             </div>
 
             <div class="form-group col-md-4">
-                @if (clnt != null)
+                @if (user != null)
                 {
                     Review recommendedReview = ViewBag.recommendedRecipe;
 
@@ -61,7 +61,7 @@
     <hr />
 
     <div class="col-md-10">
-        @if (clnt != null)
+        @if (user != null)
         {
             <h6>Can't find the right recipe?</h6>
             <button type="button" class="btn" style="border-radius: 15px 5px;">
@@ -91,7 +91,7 @@
             </div>                        
                 <div>
                     @Html.ActionLink("Details", "Details", new { id = recipe.Id })
-                    @if (clnt != null && clnt.IsAdmin)
+                    @if (user != null && user.IsAdmin)
                     {
                         <span> | </span> @Html.ActionLink("Edit", "Edit", new { id = recipe.Id })
                         <span> | </span> @Html.ActionLink("Delete", "Delete", new { id = recipe.Id })
@@ -112,11 +112,11 @@
             </article>
         }
 
-        @if (clnt != null)
+        @if (user != null)
         {
-            using (Html.BeginForm("PostComment", "Recipes"))
+            using (Html.BeginForm("PostComment", "Reviews"))
             {
-                <input type="hidden" name="clientId" value="@clnt.Id" />
+                <input type="hidden" name="userId" value="@user.Id" />
                 <input type="hidden" name="recipeId" value="@recipe.Id" />
                 <input type="text" name="content" placeholder="Add a new comment..." style="margin: 10px 0" />
                 <input type="submit" value="Post" class="btn btn-default" />
