--- a/Reviews/Views/Shared/_Layout.cshtml
+++ b/Reviews/Views/Shared/_Layout.cshtml
@@ -1,13 +1,13 @@
 ﻿@using Reviews.Models
 @{
-    User clnt = (User)Session["Client"];
+    var user = (User) Session["User"];
 }
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Recipes</title>
+    <title>@ViewBag.Title - Reviews</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/jquery-1.10.2.js"></script>
@@ -15,56 +15,58 @@
 
 </head>
 <body>
-    <header class="navbar navbar-light bg-light fixed-top reviews-navbar">
+<header class="navbar navbar-light bg-light fixed-top reviews-navbar">
+    <a href="/">
         <img src="../../Content/stackReviews.png" style="width: 10rem;">
-        <div class="navbar-nav-scroll">
-            <ul class="navbar-nav bd-navbar-nav flex-row">
-                <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                <li class="nav-item">@Html.ActionLink("Reviews", "Index", "Recipes", new { area = "" }, new { @class = "nav-link" })</li>
-                @if (clnt != null && clnt.IsAdmin)
-                {
-                    <li class="nav-item">@Html.ActionLink("Categories", "Index", "Categories", new { area = "" }, new { @class = "nav-link" })</li>
-                }
-                @if (clnt != null && clnt.IsAdmin)
-                {
-                    <li class="nav-item">@Html.ActionLink("Users", "Index", "User", new { area = "" }, new { @class = "nav-link" })</li>
-                }
-                <li class="nav-item">@Html.ActionLink("User Statistics", "Stats", "User", new { area = "" }, new { @class = "nav-link" })</li>
-                <li class="nav-item">@Html.ActionLink("Review Statistics", "Stats", "Recipes", new { area = "" }, new { @class = "nav-link" })</li>
-                <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-            </ul>
-        </div>
-        @Html.Partial("_LoginPartial")
+    </a>
+    <div class="navbar-nav-scroll">
+        <ul class="navbar-nav bd-navbar-nav flex-row">
+            <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new {area = ""}, new {@class = "nav-link"})</li>
+            <li class="nav-item">@Html.ActionLink("Reviews", "Index", "Reviews", new {area = ""}, new {@class = "nav-link"})</li>
+            @if (user != null && user.IsAdmin)
+            {
+                <li class="nav-item">@Html.ActionLink("Categories", "Index", "Categories", new {area = ""}, new {@class = "nav-link"})</li>
+            }
+            @if (user != null && user.IsAdmin)
+            {
+                <li class="nav-item">@Html.ActionLink("Users", "Index", "User", new {area = ""}, new {@class = "nav-link"})</li>
+            }
+            <li class="nav-item">@Html.ActionLink("User Statistics", "Stats", "User", new {area = ""}, new {@class = "nav-link"})</li>
+            <li class="nav-item">@Html.ActionLink("Review Statistics", "Stats", "Reviews", new {area = ""}, new {@class = "nav-link"})</li>
+            <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", new {area = ""}, new {@class = "nav-link"})</li>
+        </ul>
+    </div>
+    @Html.Partial("_LoginPartial")
 
-    </header>
-    <div class="main-search">
-        <div style="width:50%;">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search review for...">
-                <span class="input-group-btn">
-                    <button class="btn btn-outline-light btn-lg" type="button">Search!</button>
-                </span>
-            </div>
+</header>
+<div class="main-search">
+    <div style="width: 50%;">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search review for...">
+            <span class="input-group-btn">
+                <button class="btn btn-outline-light btn-lg" type="button">Search!</button>
+            </span>
         </div>
     </div>
-    <div class="container">
-        @RenderBody()
+</div>
+<div class="container">
+    @RenderBody()
 
+</div>
+<footer class="sticky-bottom" style="text-align: center;">
+    <div id="temperatureDiv">
+        <span>Weather in Tel Aviv: </span>
+        <p>getting info...</p>
     </div>
-    <footer class="sticky-bottom" style="text-align: center;">
-            <div id="temperatureDiv">
-                <span>Weather in Tel Aviv: </span>
-                <p>getting info...</p>
-            </div>
-        <div>
-            <p>© 2017 - stackReviews </p>
-        </div>
-    </footer>
+    <div>
+        <p>© 2017 - stackReviews </p>
+    </div>
+</footer>
 
-    <script src="~/Scripts/weather.js"></script>
-    <script src="https://query.yahooapis.com/v1/public/yql?q=select item, wind from weather.forecast where woeid in (select woeid from geo.places(1) where text='Tel Aviv, il') and u='c'&format=json&callback=weatherCallback"></script>
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+<script src="~/Scripts/weather.js"></script>
+<script src="https://query.yahooapis.com/v1/public/yql?q=select item, wind from weather.forecast where woeid in (select woeid from geo.places(1) where text='Tel Aviv, il') and u='c'&format=json&callback=weatherCallback"></script>
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@RenderSection("scripts", required: false)
 </body>
 </html>
