--- a/Reviews/Views/Shared/_LoginPartial.cshtml
+++ b/Reviews/Views/Shared/_LoginPartial.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    Reviews.Models.User clnt = ((Reviews.Models.User)Session["Client"]);
+    Reviews.Models.User user = ((Reviews.Models.User)Session["User"]);
 }
 
 <ul class="navbar-nav bd-navbar-nav flex-row navbar-right">
-    @if (clnt == null)
+    @if (user == null)
     {
         <li class="nav-item">
             @Html.ActionLink("Register", "Create", "User", new {area = ""}, new {@class = "btn btn-primary"})
@@ -16,7 +16,7 @@
     {
         <li class="nav-item" style="margin-top: 6px; margin-right: 20px">
             <a style="color: white !important; font-size: 18px; pointer-events: none;" href="#">
-                Welcome @(clnt.FirstName + " " + clnt.LastName)
+                Welcome @(user.FirstName + " " + user.LastName)
             </a>
         </li>
         <li class="nav-item" style="margin-right: 10px">
