--- a/Reviews/Views/User/Login.cshtml
+++ b/Reviews/Views/User/Login.cshtml
@@ -12,7 +12,7 @@
             <br/>
 
             <div class="form-group">
-                <input type="text" name="username" class="form-control" placeholder="Logon Name">
+                <input type="text" name="username" class="form-control" placeholder="Username">
                 <br/>
                 <input type="password" name="password" class="form-control" placeholder="Password">
             </div>
