--- a/Reviews/Views/User/Login.cshtml
+++ b/Reviews/Views/User/Login.cshtml
@@ -8,7 +8,7 @@
             {
             @Html.AntiForgeryToken()
 
-            <h3>Enter your details to log in</h3>
+            <h3>Login to the website</h3>
             <br/>
 
             <div class="form-group">
