--- a/Reviews/Views/User/Index.cshtml
+++ b/Reviews/Views/User/Index.cshtml
@@ -4,15 +4,16 @@
     ViewBag.Title = "Index";
 }
 
+
 @using (Html.BeginForm("Search", "User", FormMethod.Get))
 {
-    <div class="row" style="margin: 20px 0">
+    <div class="row">
         <div class="form-group">
             <div class="col-md-2">
                 Username:
             </div>
             <div class="col-md-10">
-                <input type="text" name="username" />
+                <input type="text" class="form-control" name="username" />
             </div>
         </div>
         <div class="form-group">
@@ -20,7 +21,7 @@
                 Firstname:
             </div>
             <div class="col-md-10">
-                <input type="text" name="firstname" />
+                <input type="text" class="form-control" name="firstname" />
             </div>
         </div>
         <div class="form-group">
@@ -28,7 +29,7 @@
                 Lastname:
             </div>
             <div class="col-md-10">
-                <input type="text" name="lastname" />
+                <input type="text" class="form-control" name="lastname" />
             </div>
         </div>
         <div class="form-group">
@@ -39,33 +40,33 @@
     </div>
 }
 
-<hr/>
+<hr />
 
-<button type="button" class="btn" style="border-radius: 15px 5px;">
+<button type="button" class="btn">
     @Html.ActionLink("Create a new User", "Create")
 </button>
 
-<table class="table" style="margin: 20px 0">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Gender)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Username)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Password)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsAdmin)
-        </th>
-        <th></th>
+<table class="table table-striped table-hover" style="margin: 20px 0">
+    <tr class="thead-dark">
+    <th>
+        @Html.DisplayNameFor(model => model.Gender)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.Username)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.FirstName)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.LastName)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.Password)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.IsAdmin)
+    </th>
+    <th></th>
     </tr>
 
     @foreach (var item in Model)
