--- a/Reviews/Views/User/Login.cshtml
+++ b/Reviews/Views/User/Login.cshtml
@@ -3,22 +3,20 @@
 }
 
 <div class="container-fluid">
-    <div style="display: block; padding: 10px;" align="center">
+    <div class="login card">
         @using (Html.BeginForm("Login", "User"))
             {
             @Html.AntiForgeryToken()
-
-            <h3>Login to the website</h3>
-            <br/>
-
+            <h4 class="card-title">Login</h4>
             <div class="form-group">
                 <input type="text" name="username" class="form-control" placeholder="Username">
                 <br/>
                 <input type="password" name="password" class="form-control" placeholder="Password">
             </div>
-
-            <button type="submit" class="btn btn-default" style="margin-right: 20px">Sign in</button>
-            <a href="~/Views/User/Create.cshtml">Register</a>
+            <div style="display:flex; justify-content:flex-end">
+                <a class="btn" href="~/Views/User/Create.cshtml">Register</a>
+                <button type="submit" class="btn btn-primary" style="margin-right: 5px">Sign in</button>
+            </div>
         }
     </div>
 
