--- a/Reviews/Views/User/Search.cshtml
+++ b/Reviews/Views/User/Search.cshtml
@@ -7,13 +7,13 @@
 
 @using (Html.BeginForm("Search", "User", FormMethod.Get))
 {
-    <div class="row" style="margin: 20px 0">
+    <div class="row">
         <div class="form-group">
             <div class="col-md-2">
                 Username:
             </div>
             <div class="col-md-10">
-                <input type="text" name="username" />
+                <input type="text" class="form-control" name="username" />
             </div>
         </div>
         <div class="form-group">
@@ -21,7 +21,7 @@
                 Firstname:
             </div>
             <div class="col-md-10">
-                <input type="text" name="firstname" />
+                <input type="text" class="form-control" name="firstname" />
             </div>
         </div>
         <div class="form-group">
@@ -29,7 +29,7 @@
                 Lastname:
             </div>
             <div class="col-md-10">
-                <input type="text" name="lastname" />
+                <input type="text" class="form-control" name="lastname" />
             </div>
         </div>
         <div class="form-group">
@@ -46,8 +46,8 @@
     @Html.ActionLink("Create a new User", "Create")
 </button>
 
-<table class="table" style="margin: 20px 0">
-    <tr>
+<table class="table table-striped table-hover" style="margin: 20px 0">
+    <thead class="thead-dark">
         <th>
             @Html.DisplayNameFor(model => model.Gender)
         </th>
@@ -67,7 +67,7 @@
             @Html.DisplayNameFor(model => model.IsAdmin)
         </th>
         <th></th>
-    </tr>
+    </thead>
 
 @foreach (var item in Model) {
     <tr>
