--- a/Reviews/Views/Reviews/Details.cshtml
+++ b/Reviews/Views/Reviews/Details.cshtml
@@ -49,5 +49,5 @@
     @Html.ActionLink("Back to List", "Index")
 </p>
 
-<a href="https://twitter.com/intent/tweet?screen_name=CoolRecipe&text=Check out this cool recipe for @Model.Title ! http://localhost:53013/Recipes/Details/@Model.Id" class="twitter-mention-button" data-show-count="false">Tweet to CoolRecipe</a>
+<a href="https://twitter.com/intent/tweet?screen_name=stackReviews&text=Read this review for @Model.Title http://localhost:53013/Recipes/Details/@Model.Id" class="twitter-mention-button" data-show-count="false">Tweet to stackReviews</a>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
