--- a/Reviews/Views/Reviews/Create.cshtml
+++ b/Reviews/Views/Reviews/Create.cshtml
@@ -16,10 +16,10 @@
         <input type="hidden" name="userId" value="@user.Id" />
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Category.Id, "Category", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CategoryID, "CategoryID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("CategoryID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Category.Id, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CategoryID, "", new { @class = "text-danger" })
             </div>
         </div>
 
