Fixed user statistics

--- a/Reviews/Views/User/Stats.cshtml
+++ b/Reviews/Views/User/Stats.cshtml
@@ -98,8 +98,8 @@
 </section>
 <script>
         $.ajax({
-            url: '/Users/GetGroupByGender',
-            success: function (data) {
+            url: '/User/GetGroupByGender',
+            success: (data) => {
                 createPopularUsersGraph(data, "popular-gender-graph");
             }
         })
