--- a/Reviews/Views/Shared/_Layout.cshtml
+++ b/Reviews/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
         </div>
     </div>
 </div>
-<div class="container">
+<div class="container" style="margin-bottom: 45px;">
     @RenderBody()
 
 </div>
