--- a/Reviews/Views/User/Index.cshtml
+++ b/Reviews/Views/User/Index.cshtml
@@ -43,7 +43,7 @@
 <hr />
 
 <button type="button" class="btn">
-    @Html.ActionLink("Create a new User", "Create")
+    @Html.ActionLink("Create a new User", "Add")
 </button>
 
 <table class="table table-striped table-hover" style="margin: 20px 0">
