Added some final stuff

--- a/Reviews/Views/Home/Index.cshtml
+++ b/Reviews/Views/Home/Index.cshtml
@@ -4,13 +4,20 @@
 
 <div class="row">
     <div class="col-md-12" style="padding-right: 40px;">
-        <h2>Getting started</h2>
+        <h2>Welcome To StackReviews!</h2>
         <br />
         <p>
-            In our website, you can enjoy a variety of REVIEWS from all around the world
-            And also share your personal REVIEWS with everyone and receive feedback and suggestions.
-            Once logged in, click on "REVIEWS" on the top menu to begin!
+            Think of the last time you bought something you really cared about. Maybe it was a life insurance policy. Maybe it was a coffee pot. Some people really care about lip balm.
+            Think of the amount of Googling you did, the types of people and publications you turned to for advice, until you were confident you were buying the best thing for you.
+            <br/>
+            <b>StackReviews does all that work for you.</b>
         </p>
+        <div>
+            <p>An example of an excellent review of <b>Asaf's new Seat Ibiza FR 2018</b></p>
+            <video width="640" height="360" controls>
+                <source src="~/Content/seat_ibiza_review.mp4" type="video/mp4">
+            </video>
+        </div>
     </div>
 
 </div>
